[build-system]
requires = [
    "setuptools>=68",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[project]
name = "generator"
version = "0.0.1"
authors = [
  { name="your_name", email="your_email" },
]
description = "Sample project for medium article"
readme = "README.md"