[build-system]
requires = [
    "setuptools>=68",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
generator = ["*.csv"]

[tool.setuptools.packages]
find = {}

[project]
name = "generator"
version = "0.0.3"
authors = [{name = "rafinder1", email = "rafpro33@gmail.com"}]
description = "Sample project for medium article"
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

requires-python = ">=3.8"