[metadata]
name = generator
version = 0.0.1
author = RP
author_email = rafpro33@geoteko.com.pl
description = For generating embankment attachments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rafinder1/builder.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
py_modules=["builder", "cad", "settings"]
[options]
python_requires = >=3.9